[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
console_error_panic_hook = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
sycamore = { version = "0.9.0-beta.1", features = [
    "serde",
    "suspense",
] }
tracing = "0.1"
tracing-wasm = "0.2"
js-sys = "0.3.56"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }



[dependencies.web-sys]
version = "0.3.56"
features = [
    "Window",
    "VideoTrack",
    "HtmlVideoElement",
    "HtmlSelectElement",
    "Navigator",
    "MediaStream",
    "MediaDeviceInfo",
    "MediaStreamConstraints",
    "Permissions",
    "MediaDevices",
    "MediaDeviceKind",
    "console",
    "Request",
    "RequestInit",
    "RequestMode",
    "RequestCredentials",
    "RequestCache",
    "Response",
    "ResponseInit",
]
