[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
dotenv = "0.15.0"
console_error_panic_hook = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
sycamore = { version = "0.9.0-beta.1", features = [
    "serde",
    "suspense",
] }
tracing = "0.1"
tracing-wasm = "0.2"
js-sys = "0.3.56"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
rand = "0.8"


[dependencies.web-sys]
version = "0.3.64"
features = [
    "Window",
    "VideoTrack",
    "HtmlVideoElement",
    "HtmlSelectElement",
    "HtmlSpanElement",
    "HtmlTextAreaElement",
    "Navigator",
    "MediaStream",
    "MediaDeviceInfo",
    "MediaStreamConstraints",
    "Permissions",
    "MediaDevices",
    "MediaDeviceKind",
    "console",
    "Request",
    "RequestInit",
    "RequestMode",
    "RequestCredentials",
    "RequestCache",
    "Response",
    "ResponseInit",
    "Headers",
]
